--- a/Source/chainium-wallet/src/app/home-screen/home-screen.component.css
+++ b/Source/chainium-wallet/src/app/home-screen/home-screen.component.css
@@ -1,7 +1,7 @@
 @import 'logo-img.css';
 
 .logo-image {
-    height:20%;
-    width: 20%;
-    padding-bottom: 20%;
+    height: 40%;
+    width: 40%;
+    padding-bottom: 40%;
 }
